--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <header>
     <div class="container">
       <h1>Мой блог</h1>
-      <p class="lead">Простой стартовый шаблон: тексты, фото, комментарии (локально). Готово для размещения на GitHub Pages.</p>
+      <p class="lead">Начинаю изучать вопрос " как создать сайт?".</p>
     </div>
   </header>
 
@@ -53,7 +53,7 @@
       <aside>
         <div class="card">
           <h3>Админ: создать пост</h3>
-          <div class="small">Для доступа введите пароль администратора (в шаблоне — <code>admin</code>)</div>
+          <div class="small">Для доступа введите пароль администратора (в шаблоне — <code>Japanmax4637450!</code>)</div>
           <div style="margin-top:8px" id="admin-area">
             <input id="admin-pass" type="text" placeholder="Ввести пароль для редактирования" />
             <div style="height:8px"></div>
